--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 coverage==7.6.10
 dnspython==2.7.0
+docker==7.1.0
 email_validator==2.2.0
+factory_boy==3.3.3
+Faker==36.1.1
 fastapi==0.115.6
 fastapi-cli==0.0.7
+freezegun==1.5.1
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -24,27 +32,39 @@ mdurl==0.1.2
 packaging==24.2
 pluggy==1.5.0
 psutil==6.1.1
+psycopg==3.2.5
+psycopg-binary==3.2.5
+pwdlib==0.2.1
+pycparser==2.22
 pydantic==2.10.5
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyJWT==2.10.1
 pytest==8.3.4
 pytest-asyncio==0.25.2
 pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.41.3
 taskipy==1.14.1
+testcontainers==4.9.2
 tomli==2.2.1
 typer==0.15.1
 typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
 websockets==14.1
+wrapt==1.17.2
