--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,28 @@
 services:
+  givelink_database:
+      image: postgres
+      volumes:
+        - pgdata:/var/lib/postgresql/data
+      env_file:
+        - .env
+      ports:
+        - "5432:5432"
+      healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U app_user -d app_db"]
+        interval: 5s
+        timeout: 5s
+        retries: 10
+
   givelink_app:
     image: givelink
     build: .
     ports:
       - "8000:8000"
+    depends_on:
+      givelink_database:
+        condition: service_healthy
+    env_file:
+      - .env
+
+volumes:
+  pgdata:
