update -> docker build process

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,9 @@ services:
         condition: service_healthy
     env_file:
       - .env
+    volumes:
+      - .:/app
+    command: uvicorn app:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
   pgdata:
