--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ testpaths = ["tests"]
 asyncio_default_fixture_loop_scope = "function"
 
 [tool.taskipy.tasks]
-run = 'PYTHONPATH=./ fastapi dev app.py'
+run = 'PYTHONPATH=./ uvicorn app:app --host 0.0.0.0 --port 8000 --reload'
 run_lan = 'PYTHONPATH=./ fastapi dev app.py --host 0.0.0.0'
 test = 'PYTHONPATH=./ pytest -s -x --cov=src -vv'
