--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 certifi==2024.12.14
 cffi==1.17.1
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
@@ -30,6 +31,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 packaging==24.2
+pillow==11.2.1
 pluggy==1.5.0
 psutil==6.1.1
 psycopg==3.2.5
@@ -48,6 +50,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
+reportlab==4.4.0
 requests==2.32.3
 rich==13.9.4
 rich-toolkit==0.13.2
